<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:background="@drawable/ic_widget_back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_s_diary"
        android:fontFamily="@font/inter_bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sample"
        android:fontFamily="@font/inter_bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_sample"
        android:fontFamily="@font/inter_light"
        android:ellipsize="end"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"/>

</LinearLayout>