<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myViewModel"
            type="com.junhyuk.simplememojunhyuk.viewmodel.PostActivityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/CustomBackground"
        tools:context=".view.PostActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_diary_text"
            android:theme="@style/CustomItemTextTheme"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/next_text"
            android:textSize="16sp"
            android:textStyle="normal"
            android:theme="@style/CustomTextTheme"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/back_text"
            android:textSize="16sp"
            android:textStyle="normal"
            android:theme="@style/CustomTextTheme"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <EditText
            android:id="@+id/inputTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="33dp"
            android:background="@android:color/transparent"
            android:hint="@string/edit_title"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={myViewModel.title}"
            android:theme="@style/Theme.MyApplication"
            android:textColorHint="#BDBDBD"
            android:textSize="18sp"
            android:ems="17"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:autofillHints="text" />

        <EditText
            android:id="@+id/inputContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:ems="17"
            android:hint="@string/edit_content"
            android:inputType="textMultiLine"
            android:text="@={myViewModel.content}"
            android:theme="@style/Theme.MyApplication"
            android:textColorHint="#BDBDBD"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTitle"
            android:autofillHints="textMultiLine" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/postButton"
            android:layout_width="96dp"
            android:layout_height="51dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="40dp"
            android:elevation="4dp"
            android:theme="@style/CustomButtonTheme"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:text="@string/post"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>