<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myViewModel"
            type="com.junhyuk.dailynote.viewmodel.post.InputFragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/CustomBackground"
        tools:context=".view.post.PostActivity">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/backbutton"
            android:padding="10dp"
            android:scaleType="center"
            android:theme="@style/CustomBackButtonTheme"
            app:layout_constraintBottom_toBottomOf="@+id/titleText"
            app:layout_constraintEnd_toStartOf="@+id/titleText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleText" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/add_diary_text"
            android:textSize="25sp"
            android:theme="@style/CustomItemTextTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/nextButton"
            android:layout_width="96dp"
            android:layout_height="51dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="#5DB075"
            android:elevation="4dp"
            android:theme="@style/CustomButtonTheme"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:fontFamily="@font/inter_bold"
                android:text="@string/next_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

        <EditText
            android:id="@+id/inputTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:autofillHints="text"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/edit_title"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={myViewModel.title}"
            android:textColorHint="#BDBDBD"
            android:textSize="20sp"
            android:theme="@style/Theme.MyApplication"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintWidth_percent="0.9" />

        <EditText
            android:id="@+id/inputContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:autofillHints="textMultiLine"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_light"
            android:gravity="top"
            android:hint="@string/edit_content"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:text="@={myViewModel.content}"
            android:textColorHint="#BDBDBD"
            android:textSize="18sp"
            android:theme="@style/Theme.MyApplication"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTitle"
            app:layout_constraintWidth_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>