<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:theme="@style/CustomRecyclerViewTheme"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/delete_text"
            android:background="@android:color/transparent"
            android:theme="@style/CustomItemTextTheme"
            android:textSize="24sp"
            android:fontFamily="@font/inter_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="77dp"
            android:gravity="center"
            android:text="@string/Description_text"
            android:theme="@style/CustomItemTextTheme"
            android:textSize="16sp"
            android:fontFamily="@font/inter_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/deleteButton"
            android:layout_width="327dp"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="166dp"
            android:theme="@style/CustomButtonTheme"
            app:cardCornerRadius="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/delete_text"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/inter_bold"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="230dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel_text"
            android:theme="@style/CustomTextTheme"
            android:textSize="16sp"
            android:fontFamily="@font/inter_medium"/>

    </com.google.android.material.card.MaterialCardView>

</layout>