<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:theme="@style/CustomRecyclerViewTheme"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <TextView
                    android:id="@+id/textview6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/share_text"
                    android:textSize="24sp"
                    android:theme="@style/CustomItemTextTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center"
                    android:text="@string/Description_text2"
                    android:textSize="16sp"
                    android:theme="@style/CustomItemTextTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview6" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/shareButton"
                    android:layout_width="0dp"
                    android:layout_height="51dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:theme="@style/CustomButtonTheme"
                    app:cardCornerRadius="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView5"
                    app:layout_constraintWidth_percent="0.9">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/share_text_kr"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="20dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/inter_medium"
                    android:padding="10dp"
                    android:text="@string/share_cancel_text"
                    android:textSize="16sp"
                    android:theme="@style/CustomTextTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shareButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>

</layout>